terraform/modules/bastion/sg.tf
resource "aws_security_group" "ssh_bastion_sg" {
  name        = "bastion"
  description = "Allow SSH on bastion instances"
  vpc_id      = "${var.vpc_id}"

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = ["${aws_security_group.elb_ssh_bastion_sg.id}"]
    self            = true
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "bastion"
  }
}

resource "aws_security_group" "elb_ssh_bastion_sg" {
  name        = "bastion-elb"
  description = "Allow SSH on ELB for bastion"
  vpc_id      = "${var.vpc_id}"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = "${var.elb_ingress_cidr_blocks}"
    self        = true
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "bastion-elb"
  }
}
